fixed all the functionality

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<br>
 <h1 class="title">Coffee!</h1>
-<hr>
+<div class="line"></div>
 <!--This is for filtering the coffee list-->
 <div class="divContainer">
     <div id="right-div">
